--- a/report/trustymail_report.mustache
+++ b/report/trustymail_report.mustache
@@ -331,8 +331,6 @@ opacity=0.04
 		\color{white}
 		\vspace*{3.93in}
 		\begin{flushleft}
-			%{\fontsize{40}{36}\selectfont\textit{<<&agency>>}\\\textit{HTTPS Report}}\\[22pt]
-			%{\fontsize{22}{40}\selectfont\textit{\usvardate\formatdate<<&title_date_tex>>}}
 			{\fontsize{58}{58}\selectfont Trustworthy Email Report}\\[22pt]
 			{\fontsize{22}{40}\selectfont\textsf{<<&agency>>}}\\[22pt]
 			{\fontsize{22}{40}\selectfont\textit{\usvardate\formatdate<<&title_date_tex>>}}
@@ -392,10 +390,7 @@ opacity=0.04
 \renewcommand{\footrulewidth}{0.4pt}
 \section{Executive Summary}
 \label{app:executive summary}
-%\large
 Email underpins interactions between government agencies and enables direct correspondence with US citizens, immigrants, and international users. However, email was not built with security in mind, and without supplementary configuration or architecture it lacks important properties of trusted communication. Several email authentication technologies work in harmony to enable a recipient to detect and mitigate fraudulent email, particularly SPF and DMARC.
-
-% One valuable property that can be added to email is authentication. Without it, malicious actors can trivially exploit a perceived relationship of trust between an organization (or the organization's internet domains) and a selected target, which can lead to a loss of reputation for the organization and to legitimate email being blocked from delivery.
 
 This weekly report, created by the National Cybersecurity Assessments and Technical Services (NCATS) team inside the Department of Homeland Security's National Cybersecurity and Communications Integration Center (NCCIC), is intended to assist your agency to comply with the email security aspects of \href{https://cyber.dhs.gov}{Binding Operational Directive (BOD) 18-01}. Implementation guidance can be found at \href{https://cyber.dhs.gov/guide}{https://cyber.dhs.gov/guide}.
 
@@ -403,7 +398,6 @@ This weekly report, created by the National Cybersecurity Assessments and Techni
 \addcontentsline{toc}{subsection}{Overview} % Adds a subsection to toc
 \textbf{\color{dhs-dark-gray}{\Large{Overview}}}\\~\\
 \raggedright
-%\large
 We measure the presence of SPF and DMARC records in the DNS for your agency's publicly accessible .gov hostnames, as well as support for STARTTLS by your agency's SMTP servers.  This report includes all agency-registered \href{https://github.com/GSA/data/blob/master/dotgov-domains/current-federal.csv}{second-level .gov domains} and known subdomains, collectively referred to as "hostnames" in this document. Any hostnames that respond with NXDOMAIN (``nonexistent") in the public DNS are removed from the compliance figures below.\\~\\
 
 <<&agency>> has \textbf{\numprint{<<all_eligible_domains_count>>}} hostnames that responded to DNS requests over the public Internet:
@@ -485,7 +479,7 @@ Definitions of the field values are in ``\hyperlink{Field Descriptions}{\color{b
 <</subdomain_scores>>
 <</live>>
 % Rare case: show live subdomains of non-live domains if the subdomains support SMTP (score base domain with 'N/A') - see CYHY-554
-<<^live>><<#has_live_smtp_subdomains>>\color{blue}\textbf{{<<&domain>>}} & \textit{N/A} & \textit{N/A} & \textit{N/A} & \textit{N/A} & \textit{N/A}\\
+<<^live>><<#has_live_smtp_subdomains>>\color{blue}\textbf{{<<&domain>>}} & \textit{N/A} & \textit{N/A} & \textit{N/A} & \textit{N/A} & \textit{N/A} & \textit{N/A}\\
 % Show subdomains if any subdomain_scores exist AND they support SMTP
 <<#subdomain_scores>><<#domain_supports_smtp>>\color{blue}{\ \ \ <<&domain>>} & <<#domain_supports_starttls>> \checkmark <</domain_supports_starttls>><<^domain_supports_starttls>> \xmark \textit{\ \ SMTP servers without STARTTLS: <<#smtp_servers_without_starttls>>\newline <<.>><</smtp_servers_without_starttls>>} <</domain_supports_starttls>> & <<#spf_record>><<#valid_spf>> \checkmark <</valid_spf>><<^valid_spf>> \textit{Syntax Error} <</valid_spf>><</spf_record>><<^spf_record>> \xmark <</spf_record>> & <<#valid_dmarc_policy_reject>> \checkmark <</valid_dmarc_policy_reject>><<^valid_dmarc_policy_reject>> \xmark <<#dmarc_record>><<#valid_dmarc>>\textit{\ \ p=<<&dmarc_policy>>}<</valid_dmarc>><<^valid_dmarc>>\textit{\ \ Syntax Error}<</valid_dmarc>><</dmarc_record>><<^dmarc_record>>\textit{\ \ No DMARC record}<</dmarc_record>><</valid_dmarc_policy_reject>> & <<#valid_dmarc_bod1801_rua_uri>> \checkmark <</valid_dmarc_bod1801_rua_uri>><<^valid_dmarc_bod1801_rua_uri>> \xmark <</valid_dmarc_bod1801_rua_uri>> & <<^domain_has_weak_crypto>> \checkmark <</domain_has_weak_crypto>><<#domain_has_weak_crypto>> \xmark \textit{\ \ SMTP servers with weak crypto: <<#hosts_with_weak_crypto>>\newline <<&hostname>>:<<&port>> [<<&weak_crypto_list_str>>]<</hosts_with_weak_crypto>>} <</domain_has_weak_crypto>> & <<#bod_1801_compliant>> \checkmark <</bod_1801_compliant>><<^bod_1801_compliant>> \xmark <</bod_1801_compliant>>\\<</domain_supports_smtp>><</subdomain_scores>>
 <</has_live_smtp_subdomains>><</live>>
@@ -510,7 +504,6 @@ These measurements are performed using \texttt{trustymail}, our \href{https://gi
 \addcontentsline{toc}{subsubsection}{Uses STARTTLS}% Adds subsection to toc
 \hypertarget{Uses STARTTLS}{\textbf{\color{dhs-dark-gray}{\large{Uses STARTTLS}}}}\\
 \textit{Values: \checkmark (supported), \xmark \ (not supported), No SMTP servers (no action required), N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether \textbf{all} SMTP servers at the hostname support STARTTLS (per \href{https://tools.ietf.org/html/rfc3207#section-2}{RFC 3207}). Any SMTP servers/ports that do not support STARTTLS are listed. \texttt{trustymail} checks for the presence of SMTP on TCP ports 25, 465, and 587.
 
@@ -522,7 +515,6 @@ In \texttt{trustymail}, ``Uses STARTTLS" is mapped to the value for ``Domain Sup
 \addcontentsline{toc}{subsubsection}{Has SPF Record}% Adds subsection to toc
 \hypertarget{Has SPF Record}{\textbf{\color{dhs-dark-gray}{\large{Has SPF Record}}}}\\
 \textit{Values: \checkmark (present), \xmark \ (not present), Syntax Error, N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether a valid SPF (TXT) record (per \href{https://tools.ietf.org/html/rfc7208#section-3}{RFC 7208}) is present at the hostname. See trustymail-results.csv in the Attachments section for syntax errors.
 
@@ -533,7 +525,6 @@ In \texttt{trustymail}, ``Has SPF Record" is mapped to the value for ``Valid SPF
 \addcontentsline{toc}{subsubsection}{Has DMARC p=reject}% Adds subsection to toc
 \hypertarget{Has DMARC p=reject}{\textbf{\color{dhs-dark-gray}{\large{Has DMARC p=reject}}}}\\
 \textit{Values: \checkmark (valid DMARC record with p=reject), \xmark \ (no DMARC record or invalid DMARC record or valid DMARC record without p=reject), N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether a valid DMARC (TXT) record with ``p=reject" is present at \_dmarc.<hostname>. See trustymail-results.csv in the Attachments section for details.
 
@@ -544,7 +535,6 @@ In \texttt{trustymail}, ``Has DMARC p=reject" is based on the value of ``DMARC P
 \addcontentsline{toc}{subsubsection}{Reports DMARC To DHS}% Adds subsection to toc
 \hypertarget{Reports DMARC To DHS}{\textbf{\color{dhs-dark-gray}{\large{Reports DMARC To DHS}}}}\\
 \textit{Values: \checkmark (valid DMARC record with rua=mailto:reports@dmarc.cyber.dhs.gov), \xmark \ (no DMARC record or invalid DMARC record or valid DMARC record without mailto:reports@dmarc.cyber.dhs.gov), N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether a valid DMARC (TXT) record with ``rua=mailto:reports@dmarc.cyber.dhs.gov" is present at \_dmarc.<hostname>. See trustymail-results.csv in the Attachments section for details.
 
@@ -555,7 +545,6 @@ In \texttt{trustymail}, ``Reports DMARC To DHS" is based on the value of ``DMARC
 \addcontentsline{toc}{subsubsection}{Free of SSLv2, SSLv3, 3DES, RC4}% Adds subsection to toc
 \hypertarget{Free of SSLv2, SSLv3, 3DES, RC4}{\textbf{\color{dhs-dark-gray}{\large{Free of SSLv2, SSLv3, 3DES, RC4}}}}\\
 \textit{Values: \checkmark (no weak protocols/ciphers detected), \xmark \ (weak protocols/ciphers detected), N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether any weak cryptographic protocols (Secure Sockets Layer (SSL)v2, SSLv3) or ciphers (3DES, RC4) are supported by any SMTP servers at the hostname. See trustymail-results.csv in the Attachments section for details.
 \vspace*{2mm}
@@ -564,7 +553,6 @@ Whether any weak cryptographic protocols (Secure Sockets Layer (SSL)v2, SSLv3) o
 \addcontentsline{toc}{subsubsection}{BOD 18-01 Email Compliant}% Adds subsection to toc
 \hypertarget{BOD 18-01 Email Compliant}{\textbf{\color{dhs-dark-gray}{\large{BOD 18-01 Email Compliant}}}}\\
 \textit{Values: \checkmark (compliant), \xmark \ (not compliant), N/A (hostname does not resolve in DNS)}\\~\\
-%\large
 
 Whether a hostname meets all of the following criteria for being compliant with \href{https://cyber.dhs.gov}{BOD 18-01} for email security:
   \begin{itemize}[topsep=-6pt, itemsep=0pt]
